# dumprump

./: ObjDumpRump.hs  ObjParser.hs  README.md  ReadElfRump.hs  dumprump.cabal
